@@ -1,28 +1,15 @@
 package io.basc.framework.util.codec;
 
-import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
-import java.util.stream.Collectors;
-
+import io.basc.framework.util.Elements;
 import io.basc.framework.util.Pipeline;
-import io.basc.framework.util.collect.CollectionUtils;
+import lombok.NonNull;
 
 @FunctionalInterface
 public interface Decoder<E, D> {
 	D decode(E source) throws DecodeException;
 
-	default List<D> decodeAll(Collection<? extends E> sources) throws DecodeException {
-		if (CollectionUtils.isEmpty(sources)) {
-			return Collections.emptyList();
-		}
-
-		return sources.stream().map((e) -> decode(e)).collect(Collectors.toList());
-	}
-
-	@SuppressWarnings("unchecked")
-	default D[] decodeAll(E... sources) throws DecodeException {
-		return toDecodeProcessor().processAll(sources);
+	default Elements<D> decodeAll(@NonNull Elements<? extends E> sources) throws DecodeException {
+		return sources.map((e) -> decode(e)).toList();
 	}
 
 	default <F> Decoder<F, D> fromDecoder(Decoder<F, E> decoder) {
